@@ -59,6 +59,11 @@ public class FaucetNode extends PNode {
     private final PImage faucetNode;
     private final FaucetSliderNode sliderNode;
 
+    // Variant that uses a flow rate "percentage" between 0 and 1.
+    public FaucetNode( IUserComponent userComponent, final Property<Double> flowRatePercentage, final ObservableProperty<Boolean> enabled, final double faucetLength, boolean snapToZeroWhenReleased ) {
+        this( userComponent, 1, flowRatePercentage, enabled, faucetLength, snapToZeroWhenReleased );
+    }
+
     /**
      * Constructor that adapts flow rate to a percentage of max flow rate, see #3193
      *
@@ -70,32 +75,6 @@ public class FaucetNode extends PNode {
      * @param snapToZeroWhenReleased does the knob snap back to zero when the user releases it?
      */
     public FaucetNode( IUserComponent userComponent, final double maxFlowRate, final Property<Double> flowRate, ObservableProperty<Boolean> enabled, double faucetLength, boolean snapToZeroWhenReleased ) {
-        this( userComponent, new Property<Double>( flowRate.get() / maxFlowRate ) {{
-            // set the flow rate when the percentage changes
-            addObserver( new VoidFunction1<Double>() {
-                public void apply( Double newFlowRatePercentage ) {
-                    flowRate.set( newFlowRatePercentage * maxFlowRate );
-                }
-            } );
-            // set the percentage when the flow rate changes
-            flowRate.addObserver( new VoidFunction1<Double>() {
-                public void apply( Double newFlowRate ) {
-                    set( newFlowRate / maxFlowRate );
-                }
-            } );
-        }}, enabled, faucetLength, snapToZeroWhenReleased );
-    }
-
-    /**
-     * Constructor
-     *
-     * @param userComponent          sim-sharing user component
-     * @param flowRatePercentage     the percentage of max flow rate, a value between 0 and 1 inclusive
-     * @param enabled                determines whether the slider is enabled
-     * @param faucetLength           length of the input pipe
-     * @param snapToZeroWhenReleased does the knob snap back to zero when the user releases it?
-     */
-    public FaucetNode( IUserComponent userComponent, final Property<Double> flowRatePercentage, final ObservableProperty<Boolean> enabled, final double faucetLength, boolean snapToZeroWhenReleased ) {
 
         //Scale up the faucet since it looks better at a larger size
         setScale( 1.2 ); //TODO #3199, make the image files larger instead of scaling up
@@ -110,7 +89,7 @@ public class FaucetNode extends PNode {
         addChild( pipeNode );
 
         // faucet slider
-        sliderNode = new FaucetSliderNode( userComponent, enabled, flowRatePercentage, snapToZeroWhenReleased ) {{
+        sliderNode = new FaucetSliderNode( userComponent, enabled, maxFlowRate, flowRate, snapToZeroWhenReleased ) {{
             setOffset( 4, 2.5 ); //TODO #3199, change offsets when the faucet images are revised, make these constants
             scale( HANDLE_SIZE.getWidth() / getFullBounds().getWidth() ); //scale to fit into the handle portion of the faucet image
         }};
